# menu

./: .gitignore  alembic.ini  pyproject.toml
menu/: app.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 0c3f5d84e23b_uuid.py  115ba886c02c_.py  12387fda410f_submenu_and_dish.py  223cd60daf67_aaa.py  40c9394454b1_.py  4a95300f00f9_aaa.py  572950ba6af2_.py  5935ffe5ae7b_c.py  64cd64c99659_c.py  665c433220cc_uuid.py  6e8ee2153913_submenu.py  6f45b1e5abb5_.py  7c13add768f0_.py  7c28f0e5f349_b.py  83e544688e78_c.py  882b75dabdf0_c.py  8a97288e4492_menu_submenu_dish_models_added.py  8c3217811e00_menu_submenu_dish_models_added.py  95cd4fc810fd_wtf.py  968664dccc75_c.py  acb3b49ad631_b.py  ba03dca369d3_uuid.py  bcd96529d1e0_c.py  c9a668e0f99c_submenu_and_dish.py  cd43031ccfba_c.py  d032e7055ec6_.py  df9c850a6d37_wtf.py  e5b7fe4c2ea5_aaa.py  ed22446e76e2_c.py  f21192f17572_c.py  f43208617e90_c.py  f5ce51166bc9_wtf.py  f65b0720aa6e_oof.py  fa5c2031318b_uuid.py
